--- a/src/index.html
+++ b/src/index.html
@@ -3,15 +3,192 @@
   <head>
     <meta charset="UTF-8">
     <meta
-      name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    name="viewport"
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     >
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HTML Form</title>
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <h1>HTML Form</h1>
     <script type="text/javascript" src="./main.js"></script>
+
+    <form
+      action="https://mate-academy-form-lesson.herokuapp.com/create-application/"
+      method="POST"
+      onsubmit="onSubmit()"
+    >
+
+      <fieldset class="form__block">
+        <legend>Personal information</legend>
+        <label for="surName" class="form__field">
+          Surname:
+          <input
+            type="text"
+            name="surName"
+            id="surName"
+            autocomplete="off"
+            required
+          >
+        </label>
+
+        <label for="name" class="form__field">
+          Name:
+          <input
+            type="text"
+            name="name"
+            id="name"
+            autocomplete="off"
+            required
+          >
+        </label>
+
+        <label for="age" class="form__field">
+          How old are You?
+          <input
+            type="number"
+            name="age"
+            id="age"
+            value="12"
+            max="100"
+            min="1"
+          >
+        </label>
+
+        <label for="dateOfBirthday" class="form__field">
+          Full date of birth:
+          <input
+            type="date"
+            name="dateOfBirthday"
+            id="dateOfBirthday"
+          >
+        </label>
+
+        <label for="terms" class="form__field">
+          I accept the term of agreement
+          <input
+            type="checkbox"
+            name="terms"
+            id="terms"
+            required
+          >
+        </label>
+      </fieldset>
+
+      <fieldset class="form__block">
+        <legend>Registration</legend>
+        <label for="email" class="form__field">
+          E-mail:
+          <input
+            type="email"
+            name="email"
+            id="email"
+            required
+            placeholder="email@example.com"
+          >
+        </label>
+
+        <label for="password" class="form__field">
+          Password:
+          <input
+            type="password"
+            name="password"
+            id="password"
+            required
+            minlength="5"
+            maxlength="16"
+          >
+        </label>
+      </fieldset>
+
+      <fieldset class="form__block">
+        <legend>An interesting fact about you!</legend>
+        <div class="form__field">
+          Do you love cats?
+          <input
+            type="radio"
+            id="catsY"
+            name="cats"
+            value="yes"
+          >
+          <label for="catsY"></label>Yes</label>
+          <input
+            type="radio"
+            id="catsN"
+            name="catsN"
+            value="no"
+          >
+          <label for="catsN">No</label>
+        </div>
+
+        <label for="color" class="form__field">
+          What is your favourite color?
+          <input
+            type="color"
+            name="color"
+            id="color"
+          >
+        </label>
+
+        <label for="sleepTime" class="form__field">
+          What time do you go to bed?
+          <input
+            type="time"
+            name="sleepTime"
+            id="sleepTime"
+            step="1"
+          >
+        </label>
+
+        <label for="cars" class="form__field">
+          What are your favorite brand of cars?
+          <select
+            name="car"
+            id="cars"
+            multiple size="3"
+          >
+            <option value="bmw">BMW</option>
+            <option value="audi">Audi</option>
+            <option value="lada">Lada</option>
+          </select>
+        </label>
+
+        <label for="rate" class="form__field">
+          How do you rate our work?
+          <input
+            type="range"
+            name="rate"
+            id="rate"
+            min="0"
+            max="100"
+            step="1"
+          >
+        </label>
+      </fieldset>
+
+      <fieldset class="form__block">
+        <legend>Additional info:</legend>
+        <label for="comments" class="form__field">
+          Comments:
+          <textarea
+            name="comment"
+            id="comments"
+            maxlength="280"
+          >
+          </textarea>
+        </label>
+
+        <label for="recommend" class="form__field">
+          Would you recommend us?
+          <select name="recommend" id="recommend">
+            <option value="yes">yes</option>
+            <option value="no">no</option>
+          </select>
+        </label>
+      </fieldset>
+
+      <button type="submit">Submit</button>
+
+    </form>
   </body>
 </html>
